# rover_assignment-

./: CMakeLists.txt  README.md  package.xml
config/: reactive_robot.rviz
launch/: reactive_robot_sim.launch
models/cylinder_1/: model.sdf
models/obstacles/: model.config  model.sdf
models/square_3_d/: model.config  model.sdf
models/square_3_i/: model.config  model.sdf.bak  model.sdf.bak2
models/square_3_l/: model.config  model.sdf
models/square_3_t/: model.config  model.sdf
models/square_3_x/: model.config  model.sdf
urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_burger_rgbd.gazebo.xacro  turtlebot3_burger_rgbd.urdf.xacro  turtlebot3_waffle.urdf.xacro
worlds/: obs_corridor_world.world
